library/general/block-endpoint-edit-default-role/samples/block-endpoint-edit-default-role/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockEndpointEditDefaultRole
metadata:
  name: block-endpoint-edit-default-role
spec:
  match:
    kinds:
      - apiGroups: ["rbac.authorization.k8s.io/v1"]
        kinds: ["ClusterRole"]
